@@ -16,6 +16,8 @@
 #define FEATURE_SEGMENT_PROTECTION
 #define FEATURE_S370_CHANNEL
 #define FEATURE_CHANNEL_SWITCHING
+#define FEATURE_S370E_EXTENDED_ADDRESSING
+#define FEATURE_TEST_BLOCK
 
 #endif /*defined(OPTION_370_MODE)*/
 /* end of FEAT370.H */
