@@ -57,6 +57,7 @@
 #define FEATURE_SUBSPACE_GROUP
 #define FEATURE_SUPPRESSION_ON_PROTECTION
 #define FEATURE_SYSTEM_CONSOLE
+#define FEATURE_TEST_BLOCK
 #define FEATURE_TRACING
 
 // #define FEATURE_VECTOR_FACILITY
