@@ -56,6 +56,7 @@
 #define FEATURE_SUBSPACE_GROUP
 #define FEATURE_SUPPRESSION_ON_PROTECTION
 #define FEATURE_SYSTEM_CONSOLE
+#define FEATURE_TEST_BLOCK
 #define FEATURE_TRACING
 
 #endif /*defined(OPTION_900_MODE)*/
