@@ -122,6 +122,7 @@
 #undef FEATURE_RESUME_PROGRAM
 #undef FEATURE_S370_CHANNEL
 #undef FEATURE_S390_DAT
+#undef FEATURE_S370E_EXTENDED_ADDRESSING
 #undef FEATURE_SERVICE_PROCESSOR
 #undef FEATURE_SEGMENT_PROTECTION
 #undef FEATURE_CHANNEL_SWITCHING
@@ -133,6 +134,7 @@
 #undef FEATURE_SUBSPACE_GROUP
 #undef FEATURE_SUPPRESSION_ON_PROTECTION
 #undef FEATURE_SYSTEM_CONSOLE
+#undef FEATURE_TEST_BLOCK
 #undef FEATURE_TRACING
 #undef FEATURE_VECTOR_FACILITY
 
